[gd_scene load_steps=8 format=3 uid="uid://on8wo6mbgo4k"]

[ext_resource type="Theme" uid="uid://btrn53r4bnl4p" path="res://ui/themes/challenge_ui_theme.tres" id="1_3bdbs"]
[ext_resource type="Script" path="res://ui/scripts/puzzle_builder_ui_controller.gd" id="2_3a0vk"]
[ext_resource type="Script" path="res://ui/puzzle_builder_ui/player_builder_ui/player_builder_panel.gd" id="3_vgdh1"]
[ext_resource type="Script" path="res://ui/puzzle_builder_ui/player_builder_ui/team_select_drop_down.gd" id="5_fkxel"]
[ext_resource type="Script" path="res://ui/puzzle_builder_ui/player_builder_ui/player_select_drop_down.gd" id="5_fyxwk"]
[ext_resource type="Script" path="res://ui/puzzle_builder_ui/player_builder_ui/stat_buttons.gd" id="5_ii85r"]
[ext_resource type="Texture2D" uid="uid://bgupcleo51cf" path="res://assets/textures/player_sprites/line_rat.png" id="9_xtmr1"]

[node name="PuzzleBuilderUi" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_top = 8.0
offset_right = 1920.0
offset_bottom = 1092.0
mouse_filter = 2
theme = ExtResource("1_3bdbs")
script = ExtResource("2_3a0vk")

[node name="ChallengeInformation" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.377929
anchor_top = 0.59866
anchor_right = 0.816863
anchor_bottom = 1.81268
offset_left = 787.623
offset_top = 73.0524
offset_right = -994.377
offset_bottom = -948.948
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3bdbs")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ChallengeInformation"]
layout_mode = 2
size_flags_vertical = 0
text = "Challenge Information"
horizontal_alignment = 1
uppercase = true

[node name="SideBoard" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.240301
anchor_top = 0.0165568
anchor_right = 1.35957
anchor_bottom = 1.12265
offset_left = 787.623
offset_top = 73.0524
offset_right = -994.377
offset_bottom = -948.948
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_3bdbs")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="SideBoard"]
layout_mode = 2
size_flags_vertical = 0
text = "SideBoard
"
horizontal_alignment = 1
uppercase = true

[node name="PlayerBuilderPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("ma_stat_controller", "av_stat_controller", "st_stat_controller", "ag_stat_controller", "pa_stat_controller", "team_select_dropdown", "player_select_dropdown", "place_holder_player", "is_opponent_check_button", "block_check_button", "guard_check_button", "ball_check_button", "frenzy_check_button", "clear_button")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.377929
anchor_top = 0.0174793
anchor_right = 0.816863
anchor_bottom = 1.52486
offset_left = 787.623
offset_top = 73.0524
offset_right = -994.377
offset_bottom = -948.948
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "build a player, then drag and drop on the field or sideboard."
mouse_filter = 2
theme = ExtResource("1_3bdbs")
script = ExtResource("3_vgdh1")
ma_stat_controller = NodePath("VBoxContainer/HBoxContainer/StatVbox/MaStatController")
av_stat_controller = NodePath("VBoxContainer/HBoxContainer/StatVbox/AvStatController")
st_stat_controller = NodePath("VBoxContainer/HBoxContainer/StatVbox/StStatController")
ag_stat_controller = NodePath("VBoxContainer/HBoxContainer/StatVbox/AgStatController")
pa_stat_controller = NodePath("VBoxContainer/HBoxContainer/StatVbox/PaStatController")
team_select_dropdown = NodePath("VBoxContainer/VBoxContainer2/HBoxContainer/TeamSelectDropDown")
player_select_dropdown = NodePath("VBoxContainer/VBoxContainer2/HBoxContainer/PlayerSelectDropDown")
place_holder_player = NodePath("VBoxContainer/VBoxContainer2/PlaceHolderPlayer")
is_opponent_check_button = NodePath("VBoxContainer/VBoxContainer2/HBoxContainer/CheckButton")
block_check_button = NodePath("VBoxContainer/HBoxContainer/SkillChecks/BlockCheck")
guard_check_button = NodePath("VBoxContainer/HBoxContainer/SkillChecks/GuardCheck")
ball_check_button = NodePath("VBoxContainer/HBoxContainer/SkillChecks/BallCheck")
frenzy_check_button = NodePath("VBoxContainer/HBoxContainer/SkillChecks/FrenzyCheck")
clear_button = NodePath("VBoxContainer/HBoxContainer/SkillChecks/Button")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.45

[node name="CheckButton" type="CheckButton" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "opponent"

[node name="TeamSelectDropDown" type="MenuButton" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "team select"
item_count = 2
popup/item_0/text = "skaven"
popup/item_0/id = 0
popup/item_1/text = "humans"
popup/item_1/id = 1
script = ExtResource("5_fkxel")

[node name="PlayerSelectDropDown" type="MenuButton" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "player select
"
script = ExtResource("5_fyxwk")

[node name="spacer" type="Label" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="PlaceHolderPlayer" type="TextureRect" parent="PlayerBuilderPanel/VBoxContainer/VBoxContainer2"]
z_index = -1
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_xtmr1")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer"]
layout_mode = 2

[node name="StatVbox" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="spacer" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox"]
layout_mode = 2

[node name="MaStatController" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox" node_paths=PackedStringArray("plus_button", "minus_button", "stat_label")]
layout_mode = 2
script = ExtResource("5_ii85r")
plus_button = NodePath("VBoxContainer/PlusButton")
minus_button = NodePath("VBoxContainer/MinusButton")
stat_label = NodePath("StatsLabel")

[node name="MA_label" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/MaStatController"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "MA:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/MaStatController"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/MaStatController"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/MaStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="MinusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/MaStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="StStatController" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox" node_paths=PackedStringArray("plus_button", "minus_button", "stat_label")]
layout_mode = 2
script = ExtResource("5_ii85r")
plus_button = NodePath("VBoxContainer/PlusButton")
minus_button = NodePath("VBoxContainer/MinusButton")
stat_label = NodePath("StatsLabel")

[node name="StLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/StStatController"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "ST:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/StStatController"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/StStatController"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/StStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="MinusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/StStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="AgStatController" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox" node_paths=PackedStringArray("plus_button", "minus_button", "stat_label")]
layout_mode = 2
script = ExtResource("5_ii85r")
plus_button = NodePath("VBoxContainer/PlusButton")
minus_button = NodePath("VBoxContainer/MinusButton")
stat_label = NodePath("StatLabel")

[node name="AgLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AgStatController"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "AG:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AgStatController"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AgStatController"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AgStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="MinusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AgStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="PaStatController" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox" node_paths=PackedStringArray("plus_button", "minus_button", "stat_label")]
layout_mode = 2
script = ExtResource("5_ii85r")
plus_button = NodePath("VBoxContainer/PlusButton")
minus_button = NodePath("VBoxContainer/MinusButton")
stat_label = NodePath("StatLabel")

[node name="PaLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/PaStatController"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "PA:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/PaStatController"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/PaStatController"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/PaStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="MinusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/PaStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="AvStatController" type="HBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox" node_paths=PackedStringArray("plus_button", "minus_button", "stat_label")]
layout_mode = 2
script = ExtResource("5_ii85r")
plus_button = NodePath("VBoxContainer/PlusButton")
minus_button = NodePath("VBoxContainer/MinusButton")
stat_label = NodePath("StatLabel")

[node name="AvLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AvStatController"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "AV:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatLabel" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AvStatController"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AvStatController"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="PlusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AvStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="MinusButton" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/StatVbox/AvStatController/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="Spacer" type="Container" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="SkillChecks" type="VBoxContainer" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
layout_mode = 2

[node name="BlockCheck" type="CheckButton" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "block"

[node name="GuardCheck" type="CheckButton" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "guard"

[node name="BallCheck" type="CheckButton" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ball"

[node name="FrenzyCheck" type="CheckButton" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "frenzy
"

[node name="Button" type="Button" parent="PlayerBuilderPanel/VBoxContainer/HBoxContainer/SkillChecks"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "clear"

[node name="ActionBox" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 1029.0
offset_top = 239.0
offset_right = 1858.9
offset_bottom = 543.009
theme = ExtResource("1_3bdbs")

[node name="HBoxContainer" type="HBoxContainer" parent="ActionBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="ActionBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("9_xtmr1")
expand_mode = 5

[node name="Label" type="Label" parent="ActionBox/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="ActionBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("9_xtmr1")
expand_mode = 5

[node name="Label" type="Label" parent="ActionBox/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="ActionBox/HBoxContainer/VBoxContainer3"]
layout_mode = 2
texture = ExtResource("9_xtmr1")
expand_mode = 5

[node name="Label" type="Label" parent="ActionBox/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="ActionBox/HBoxContainer/VBoxContainer4"]
layout_mode = 2
texture = ExtResource("9_xtmr1")
expand_mode = 5

[node name="Label" type="Label" parent="ActionBox/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="ActionBox/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="ActionBox/HBoxContainer/VBoxContainer5"]
layout_mode = 2
texture = ExtResource("9_xtmr1")
expand_mode = 5

[node name="Label" type="Label" parent="ActionBox/HBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 92.0
offset_top = 60.0
offset_right = 540.097
offset_bottom = 109.0
size_flags_vertical = 0
text = "player builder

"
horizontal_alignment = 1
uppercase = true
